<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, GidderActivity!</string>
    <string name="app_name">Gidder</string>
    <string name="add_user_fullname">Full name</string>
    <string name="add_user_email">E-Mail</string>
    <string name="add_user_username">Username</string>
    <string name="btn_add">Add</string>
    <string name="btn_cancel">Cancel</string>
    <string name="add_user_password">Password</string>
    <string name="add_repository_name">Name</string>
    <string name="add_repository_mapping">Mapping</string>
    <string name="add_repository_description">Description</string>
    <string name="btn_edit">Edit</string>
    <string name="add_user_title">Add new user</string>
    <string name="add_user_edittitle">Edit user</string>
	<string name="add_user_activate">Activate user</string>
    <string name="btn_add_user">Add user</string>
    <string name="btn_add_repository">Add repository</string>
    <string name="add_repository_title">Add repository</string>
    <string name="add_repository_edittitle">Edit repository</string>
    <string name="action_popup_edit">Edit</string>
    <string name="action_popup_delete">Delete</string>
    <string name="action_popup_activate">Activate</string>
    <string name="action_popup_deactivate">Deactivate</string>
    <string name="btn_done">Done</string>
    <string name="repository_permissions_item_pull">Pull</string>
    <string name="repository_permissions_item_push">Push</string>
    <string name="click_to_disable">Click to disable</string>
    <string name="click_to_enable">Click to enable</string>
    <string name="settings_git_repositories_directory">Git repositories directory</string>
    <string name="settings_ssh_server_port">SSH server port</string>
    <string name="settings_start_on_boot">Start SSH server on boot</string>
	<string name="dns_provider_title">Choose DNS provider</string>
    <string-array name="dns_providers">
        <item>DynDNS.com</item>
        <item>No-Ip.com</item>
    </string-array>
	<string name="show_password">Show password</string>
	<string name="dns_password">Password</string>
	<string name="dns_username">Username</string>
	<string name="dns_domain_name">Domain Name</string>
	<string name="dns_provider">Provider</string>
	<string name="dns_activate">Activate Dynamic DNS service</string>
	<string name="dns_deactivate">Deactivate Dynamic DNS service</string>
	<string name="btn_save">Save</string>
	<string name="repositories_no_repositories_label">No repositories</string>
	<string name="users_no_users_label">No users</string>
	<string name="use_contact">Use contact</string>
	<string name="home_start">Start</string>
	<string name="dialog_pick_e_mail_address">Pick e-mail address</string>
	<string name="user_details">User details</string>
	<string name="no_repositories">No repositories</string>
	<string name="add_permission">Add permission</string>
	<string name="no_permissions">No permissions</string>
	<string name="permissions">Permissions</string>
	<string name="edit">Edit</string>
	<string name="activate">Activate</string>
	<string name="delete">Delete</string>
	<string name="repository_details">Repository details</string>
	<string name="no_users">No users</string>
	<string name="add_repository_activate">Activate repository</string>
	<string name="server_settings">Server Settings</string>
	<string name="general_settings">General Settings</string>
	<string name="eula">
		END-USER LICENSE AGREEMENT FOR Gidder IMPORTANT PLEASE READ THE TERMS AND CONDITIONS OF THIS LICENSE AGREEMENT CAREFULLY BEFORE CONTINUING WITH THIS PROGRAM INSTALL: Antoniy Chonkov End-User License Agreement (\"EULA\") is a legal agreement between you (either an individual or a single entity) and Antoniy Chonkov. for the Antoniy Chonkov software product(s) identified above which may include associated software components, media, printed materials, and \"online\" or electronic documentation (\"SOFTWARE PRODUCT\"). By installing, copying, or otherwise using the SOFTWARE PRODUCT, you agree to be bound by the terms of this EULA. This license agreement represents the entire agreement concerning the program between you and Antoniy Chonkov, (referred to as \"licenser\"), and it supersedes any prior proposal, representation, or understanding between the parties. If you do not agree to the terms of this EULA, do not install or use the SOFTWARE PRODUCT.\n
		\n
		The SOFTWARE PRODUCT is protected by copyright laws and international copyright treaties, as well as other intellectual property laws and treaties. The SOFTWARE PRODUCT is licensed, not sold.\n
		\n
		1. GRANT OF LICENSE.\n
		The SOFTWARE PRODUCT is licensed as follows:\n
		(a) Installation and Use.\n
		Antoniy Chonkov grants you the right to install and use copies of the SOFTWARE PRODUCT on your computer running a validly licensed copy of the operating system for which the SOFTWARE PRODUCT was designed [e.g., Windows 95, Windows NT, Windows 98, Windows 2000, Windows 2003, Windows XP, Windows ME, Windows Vista].\n
		(b) Backup Copies.\n
		You may also make copies of the SOFTWARE PRODUCT as may be necessary for backup and archival purposes.\n
		\n
		2. DESCRIPTION OF OTHER RIGHTS AND LIMITATIONS.\n
		(a) Maintenance of Copyright Notices.\n
		You must not remove or alter any copyright notices on any and all copies of the SOFTWARE PRODUCT.\n
		(b) Distribution.\n
		You may not distribute registered copies of the SOFTWARE PRODUCT to third parties. Evaluation versions available for download from Antoniy Chonkov\'s websites may be freely distributed.\n
		(c) Prohibition on Reverse Engineering, Decompilation, and Disassembly.\n
		You may not reverse engineer, decompile, or disassemble the SOFTWARE PRODUCT, except and only to the extent that such activity is expressly permitted by applicable law notwithstanding this limitation.\n
		(d) Rental.\n
		You may not rent, lease, or lend the SOFTWARE PRODUCT.\n
		(e) Support Services.\n
		Antoniy Chonkov may provide you with support services related to the SOFTWARE PRODUCT (\"Support Services\"). Any supplemental software code provided to you as part of the Support Services shall be considered part of the SOFTWARE PRODUCT and subject to the terms and conditions of this EULA.\n
		(f) Compliance with Applicable Laws.\n
		You must comply with all applicable laws regarding use of the SOFTWARE PRODUCT.\n
		\n
		3. TERMINATION\n
		Without prejudice to any other rights, Antoniy Chonkov may terminate this EULA if you fail to comply with the terms and conditions of this EULA. In such event, you must destroy all copies of the SOFTWARE PRODUCT in your possession.\n
		\n
		4. COPYRIGHT\n
		All title, including but not limited to copyrights, in and to the SOFTWARE PRODUCT and any copies thereof are owned by Antoniy Chonkov or its suppliers. All title and intellectual property rights in and to the content which may be accessed through use of the SOFTWARE PRODUCT is the property of the respective content owner and may be protected by applicable copyright or other intellectual property laws and treaties. This EULA grants you no rights to use such content. All rights not expressly granted are reserved by Antoniy Chonkov.\n
		\n
		5. NO WARRANTIES\n
		Antoniy Chonkov expressly disclaims any warranty for the SOFTWARE PRODUCT. The SOFTWARE PRODUCT is provided \'As Is\' without any express or implied warranty of any kind, including but not limited to any warranties of merchantability, noninfringement, or fitness of a particular purpose. Antoniy Chonkov does not warrant or assume responsibility for the accuracy or completeness of any information, text, graphics, links or other items contained within the SOFTWARE PRODUCT. Antoniy Chonkov makes no warranties respecting any harm that may be caused by the transmission of a computer virus, worm, time bomb, logic bomb, or other such computer program. Antoniy Chonkov further expressly disclaims any warranty or representation to Authorized Users or to any third party.\n
		\n
		6. LIMITATION OF LIABILITY\n
		In no event shall Antoniy Chonkov be liable for any damages (including, without limitation, lost profits, business interruption, or lost information) rising out of \'Authorized Users\' use of or inability to use the SOFTWARE PRODUCT, even if Antoniy Chonkov has been advised of the possibility of such damages. In no event will Antoniy Chonkov be liable for loss of data or for indirect, special, incidental, consequential (including lost profit), or other damages based in contract, tort or otherwise. Antoniy Chonkov shall have no liability with respect to the content of the SOFTWARE PRODUCT or any part thereof, including but not limited to errors or omissions contained therein, libel, infringements of rights of publicity, privacy, trademark rights, business interruption, personal injury, loss of privacy, moral rights or the disclosure of confidential information.
	</string>
	<string name="updates"></string>
</resources>