<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/menu_bg"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/addUserFullname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:inputType="textCapWords" 
        android:hint="@string/add_user_fullname">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/addUserEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress" 
        android:hint="@string/add_user_email"/>

    <EditText
        android:id="@+id/addUserUsername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:inputType="text"
        android:hint="@string/add_user_username"/>

    <EditText
        android:id="@+id/addUserPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" 
        android:hint="@string/add_user_password"/>

	<ListView
	    android:id="@+id/listView1"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent" 
	    android:layout_weight="1">
	</ListView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:gravity="bottom">

        <Button
            android:id="@+id/addUserBtnAdd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_add" 
            android:layout_weight="1"/>

        <Button
            android:id="@+id/addUserBtnCancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>